# ai-humanoid-textbook

./: .gitignore  CLAUDE.md  README.md  docusaurus.config.js  package-lock.json  package.json
.github/workflows/: deploy.yml
.specify/memory/: constitution.md
backend/: README.md  pyproject.toml
backend/src/api/: chat_router.py  health_router.py  main.py
backend/src/config/: settings.py
backend/src/models/: chat_session.py  message.py  query_request.py  retrieved_context.py
backend/src/services/: chat_service.py  database.py  qdrant_client.py  qdrant_service.py  rag_agent.py  rate_limiter.py
backend/src/utils/: validators.py
backend/tests/: test_basic_functionality.py
backend/tests/integration/: test_error_scenarios.py
backend/tests/unit/: test_config.py  test_error_handling.py
blog/: 2025-01-01-welcome-to-physical-ai-textbook.md  2025-01-08-ros2-fundamentals.md  authors.yml
docs/: _category_.json
docs/capstone/: implementation.md  index.md
docs/module-1-ros/: index.md
docs/module-3-isaac/: index.md  perception-stack.md
docs/module-4-vla/: vision-systems.md
docs/module-5-digital-physical/: bridge-content.md
docs/reference/: glossary.md  index.md  summary.md  vla-troubleshooting.md
docs/tutorials/: index.md  isaac-sim-setup.md  (+1 more)
frontend/: docusaurus.config.js  package-lock.json  package.json  sidebars.js
research/: complete-image-optimization-guide.md  image-analysis-tool.js  image-optimization-implementation.md  image-optimization-summary.md  image-optimization-techniques.md
tools/: check_qdrant.py  recreate_collection.py
(+98 files in other folders)
